--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "menu": "adb shell input keyevent 82"
   },
   "dependencies": {
     "react": "16.3.1",
