--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "menu": "adb shell input keyevent 82"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react-native": "0.59.9",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
